namespace-devopstools.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
---
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
