deployment-hotelapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotelapi
  namespace: hotel-dev
  labels:
    app: hotel
spec:
  replicas: 2
  selector:
    matchLabels:
      name: hotelapi
  template:
    metadata:
      labels:
        name: hotelapi
    spec:
      containers:
      - name: 'hotelapi'
        image: 'maayanpeleg87/hotel-api:latest'
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        ports:
        - containerPort: 8000
