deployment-hoteldb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hoteldb
  namespace: hotel-dev
  labels:
    app: hotel
spec:
  replicas: 2
  selector:
    matchLabels:
      name: hoteldb
  template:
    metadata:
      labels:
        name: hoteldb
    spec:
      containers:
      - name: 'hoteldb'
        image: 'maayanpeleg87/hotel-db:latest'
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          readOnlyRootFilesystem: true
        ports:
        - containerPort: 3306
