deployment-hotelfrontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotelfrontend
  namespace: hotel-dev
  labels:
    app: hotel
spec:
  replicas: 2
  selector:
    matchLabels:
      name: hotelfrontend
  template:
    metadata:
      labels:
        name: hotelfrontend
    spec:
      containers:
      - name: 'hotelfrontend'
        image: 'maayanpeleg87/hotel-frontend:latest'
        ports:
        - containerPort: 5000
