ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotel
  namespace: hotel-dev
spec:
  ingressClassName: nginx-service
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hotelfrontend
            port:
              number: 80
